src/test/deca/context/valid/asm.deca
// Description:
// 	declaration asm
//
// Result:
//Ok

class A {
    void test() asm ("Fonction assembleur.");
}
