src/test/deca/context/invalid/2_9.deca
class A{
    void A(void a){
        
    }
}